# meters

./: CMakeLists.txt  Kconfig  west.yml
dts/bindings/serial/: strim,meter.yaml
sample/: CMakeLists.txt  prj.conf
sample/boards/: black_f407ve.overlay  nucleo_f767zi.overlay  semc_ecx.conf  semc_ecx.overlay
sample/src/: arm_mpu_custom_regions.c  main.c
src/: meters.c  meters.h  meters_private.h  meters_shell.c  meters_spm90.c  meters_spm90.h  protocol_utils.c  protocol_utils.h
src/meter485/: meters_call.c  meters_call.h  meters_ce318.c  meters_ce318.h  meters_mercury234.c  meters_mercury234.h  meters_poll485.c  meters_poll485.h  meters_spm90.c  meters_spm90.h
zephyr/: module.yaml
