cmake_minimum_required(VERSION 3.20.0)

list(APPEND ZEPHYR_EXTRA_MODULES "${CMAKE_SOURCE_DIR}/../../Bus485" "${CMAKE_SOURCE_DIR}/..")
#list(APPEND ZEPHYR_EXTRA_MODULES "${CMAKE_SOURCE_DIR}/..")
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(app)

target_sources(app PRIVATE src/main.c)